assets: fix the scrolling of the "Clear" icon in "Preview" action panel
This commit fixes a graphical issue whereby in the "Preview" panel of
the action's testing mode, when the preview content overflowed
horizontally and was scrolled, the "X" icon that allows the content to
be cleared did not follow the scrolling, potentially becoming hidden.

Close #1352.

--- a/assets/src/components/routes/ActionWrapper/Action.css
+++ b/assets/src/components/routes/ActionWrapper/Action.css
@@ -1199,9 +1199,9 @@ inherit the disabled style */
 }
 
 .fullscreen-transformation__output-clear {
-	position: absolute;
-	right: 10px;
-	top: 5px;
+    position: fixed;
+    right: 25px;
+    top: 65px;
 }
 
 .fullscreen-transformation__output-success {
